Change eaten color to white

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ Your browser does not support the HTML canvas tag.
             ctx.fill();
 
             if (slices < 8) {
-                ctx.fillStyle = 'blue';
+                ctx.fillStyle = 'white
                 ctx.beginPath();
                 if (slices == 0) {
                     slices = 8;
                 }
-                ctx.arc(200, 200, 150, 0, Math.PI * 2 * slices / 8, true);
+                ctx.arc(200, 200, 152 0, Math.PI * 2 * slices / 8, true);
                 ctx.lineTo(200, 200);
                 ctx.fill();
                 if (slices == 8) {
